--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
 {% load goods_tags %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container">
-                <a class="navbar-brand" href="{% url "main:index" %}">Home</a>
+                <a class="navbar-brand" href="{% url "main:index" %}">Store</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +41,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item  text-white" href="#">Доставка и оплата</a></li>
                                 <li><a class="dropdown-item  text-white" href="#">Контактная информация</a></li>
-                                <li><a class="dropdown-item  text-white" href="{% url "main:about" %}">Про нас</a></li>
+                                <li><a class="dropdown-item  text-white" href="{% url "main:about" %}">О нас</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -56,14 +55,14 @@
                             <li class="nav-item dropdown ">
                                 <a class="nav-link dropdown-toggle text-white" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                    Мой профиль
+                                    Профиль
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item  text-white" href="carts/cart.html">Корзина</a></li>
                                     <li><a class="dropdown-item  text-white" href="{% url "user:profile" %}">Личный кабинет</a>
                                     </li>
                                     {% if user.is_admin or user.is_staff %}
-                                        <li><a class="dropdown-item  text-white" href="{% url "admin:index" %}">Админ панель</a></li>
+                                        <li><a class="dropdown-item  text-white" href="{% url "admin:index" %}">Админ панель</a></li>    <!-- Админ панель скрывается от обычного пользователя. Доступна персоналу суперюзеру. -->
                                     {% endif %}
                                     <li>
                                         <hr class="dropdown-divider">
@@ -96,7 +95,7 @@
                     <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
                         {% tag_categories as categories %}
                         {% for category in categories %}
-                            <li><a class="dropdown-item text-white" href="{% url "catalog:index" category.slug %}">{{category.name}}</a></li>
+                            <li><a class="dropdown-item text-white" href="{% url "catalog:index" category.slug %}">{{category.name}}</a></li>    
                         {% endfor %}
 
                     </ul>
@@ -114,8 +113,8 @@
                 </div>
                 <div class="col-lg-10">
                     <!-- Контент на странице -->
-                    {% include "includes/notifications.html" %}
-                    {% block content %}{% endblock %}
+                    {% include "includes/notifications.html" %}      <!-- Вставляем из notifications.html -->
+                    {% block content %}{% endblock %}                                 
                 </div>
             </div>
         </div>
