--- a/templates/includes/notifications.html
+++ b/templates/includes/notifications.html
@@ -1,4 +1,6 @@
-{% load static %}
+
+ <!-- контент на главной странице. Блоки с товаром -->
+ {% load static %}
 
 {% if form.non_field_errors %}
     <div class="container mt-4">
