--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,7 +10,7 @@
             <div class="col-md-5">
                 <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                     <h3 class="text-center mb-4">Профиль пользователя</h3>
-                    <form action="{% url "users:profile" %}" method="post" enctype="multipart/form-data">
+                    <form action="{% url "users:profile" %}" method="post" enctype="multipart/form-data">   <!-- Атоибут enctype="multipart/form-data"-Могут оиправляться и файлы(фото пользователя) -->   
                         {% csrf_token %}
                         <div class="row">
                             <div class="col-md-12 mb-3 text-center">
@@ -26,8 +26,8 @@
                                 <input type="file" class="form-control mt-3" id="id_image"
                                     name='image'
                                     accept="image/*">
-                                    {% if form.image.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{form.image.errors}}</div>
+                                    {% if form.image.errors %}                                                              <!-- Проверка с ошибками -->                               
+                                    <div class="alert alert-danger alert-dismissible fade show">{{form.image.errors}}</div> 
                                     {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
@@ -38,7 +38,7 @@
                                     value="{{ form.first_name.value }}"
                                     required>
                                     {% if form.first_name.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{form.first_name.errors}}</div>
+                                    <div class="alert alert-danger alert-dismissible fade show">{{form.first_name.errors}}</div>    <!-- Пользователь может не только просматривать, но и менять -->
                                     {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
@@ -49,7 +49,7 @@
                                     value="{{ form.last_name.value }}"
                                     required>
                                     {% if form.last_name.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{form.last_name.errors}}</div>
+                                    <div class="alert alert-danger alert-dismissible fade show">{{form.last_name.errors}}</div>    <!-- Пользователь может не только просматривать, но и менять эту инфу -->
                                     {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
@@ -60,7 +60,7 @@
                                     value="{{ form.username.value }}"
                                     required>
                                     {% if form.username.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{form.username.errors}}</div>
+                                    <div class="alert alert-danger alert-dismissible fade show">{{form.username.errors}}</div>      <!-- Пользователь может не только просматривать, но и менять эту инфу -->
                                     {% endif %}
                             </div>
                             <div class="col-md-12 mb-3">
@@ -71,7 +71,7 @@
                                     value="{{ form.email.value }}"
                                     required>
                                     {% if form.email.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{form.email.errors}}</div>
+                                    <div class="alert alert-danger alert-dismissible fade show">{{form.email.errors}}</div>      <!-- Пользователь может не только просматривать, но и менять эту инфу -->
                                     {% endif %}
                             </div>
                         </div>
@@ -79,6 +79,7 @@
                     </form>
                 </div>
             </div>
+
             <!-- Корзина -->
             {% user_carts request as carts %}
 
@@ -124,7 +125,6 @@
                                                     <td>{{ item.quantity }}</td>
                                                     <td>{{ item.price }}</td>
                                                     <td>{{ item.products_price }}</td>
-                                                    
                                                 </tr>
                                                 {% endfor %}
                                             </tbody>
